--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+body {
+  background-image: url("https://shorecraftbeer.com/wp-content/uploads/2015/08/background.jpg");
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -39,23 +43,16 @@
 
 .HomeContainer {
   height: 100vh;
-  background-image: linear-gradient(
-      rgba(255, 255, 255, 0.157),
-      rgba(255, 255, 255, 0.157)
-    ),
-    url("https://shorecraftbeer.com/wp-content/uploads/2015/08/background.jpg");
-  margin-top: 0px;
-  align-content: space-around;
+
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
 
 .h1home {
-  font-size: 3.5em;
-  font-weight: 900;
-  @media screen and (min-width: 300px) and (max-width: 700px) {
-    font-size: 2.5em;
-    margin: 0 10%;
-    color: rgba(241, 237, 6, 0.739);
-  }
+  color: #ffffff;
+  margin-left: 20%;
+  margin-top: 100px;
 }
 
 .ListBeer {
@@ -70,37 +67,26 @@
 }
 
 .nav-buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 55%;
-  @media screen and (min-width: 300px) and (max-width: 650px) {
-    width: 95%;
-    margin-left: 2px;
-  }
-  @media screen and (min-width: 651px) and (max-width: 900px) {
-    width: 95%;
-  }
-  @media screen and (min-width: 901px) and (max-width: 1100px) {
-    width: 70%;
-  }
-}
-
-.button {
-  align-content: center;
-  text-decoration: none;
-  padding: 2%;
-  margin: 2% 0 3% 0;
-  width: 70%;
+  text-align: center;
+  margin-left: 20px;
+  margin-top: 50px;
+  width: 40%;
+  height: 25%;
   background-color: #ffb700ec;
   border-color: rgba(255, 211, 99, 0.773);
   border-radius: 5px;
   color: #240603b9;
-  font-size: 1em;
-  font-weight: 700;
-  @media screen and (min-width: 300px) and (max-width: 650px) {
-    width: 100%;
-    font-size: 0.8em;
-  }
+  float: left;
+  padding-top: 10%;
+}
+
+.button {
+  font-size: 15pt;
+  color: white;
+  text-decoration: none;
+}
+
+table {
+  background-color: white;
+  opacity: 75%;
 }
